# GtisSerializer

./: BhrSerializer.pro  CMakeLists.txt  GitsSerializer.pro  README.md  main.cpp
.github/workflows/: main.yml
doc/: CppDataSerializer.key
include/: eos.h
include/logger/: logger.h
include/meta/: comparator.h  jsonizer.h  meta_property.h  stringifier.h  tuple_to_struct.h
include/profile/: performance.h
include/serializer/: Json.h  NlohmannJSON.h  SqliteSerializer.h  StdOstream.h  StdString.h  TSerializer.h
include/settings/: any.h  any_property_set.h  settings.h
include/types/: Serializable.h  auto_callback.h
include/utils/: CompareUtils.h  Utils.h
serializable/: Serializable.h
serializer/: NlohmannJSON.h  QtJSON.h  QtSqlInsertSerializer.h  QtSqlSelectSerializer.h  StdOstream.h  StdString.h  TSerializer.h
src/: Example_1.h  Example_2.h  Example_3.h  example_4.h  main.cpp
src/samples/logger/: sample.h
src/samples/meta/: sample_2.h  samples.h
src/samples/profile/: sample.h
src/samples/settings/: sample.h
src/samples/types/: sample.h
third/bhrSQL/: CMakeLists.txt  LICENSE  README.md  bhrSQL.pro
third/bhrSQL/include/bhrSQL/: SqlAlterTable.h  SqlCondition.h  SqlCreateTable.h  SqlDelete.h  SqlDropTable.h  SqlFrom.h  SqlGroupBy.h  SqlHelper.h  SqlInsert.h  SqlLimit.h  SqlOrderBy.h  SqlSelect.h  SqlUpdate.h  SqlWhere.h
third/bhrSQL/src/: Example_1.h  main.cpp  test.cpp
third/bhrSQL/tests/: SqlDeleteTest.h
utils/: CompareUtils.h  SfinaeSerializableUtils.h  TupleUtils.h  Utils.h
